<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24px"
        android:title="@string/bottomNav_home" />
    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_baseline_category_24px"
        android:title="@string/bottomNav_category" />
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_baseline_notification_important_24px"
        android:title="@string/bottomNav_notification" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_baseline_search_24px"
        android:title="@string/bottomNav_search" />
    <item
        android:id="@+id/nav_person"
        android:icon="@drawable/ic_baseline_person_24px"
        android:title="@string/bottomNav_person" />
</menu>